[gd_scene load_steps=22 format=2]

[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://fsm/states/patrol.gd" type="Script" id=3]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=4]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=5]
[ext_resource path="res://pieces/walledge_detector.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/enemies/gigamanner.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/gigamanner.png" type="Texture" id=8]
[ext_resource path="res://entities/enemies/data/gigamanner.tres" type="Resource" id=10]
[ext_resource path="res://entities/enemies/eel_shoot.wav" type="AudioStream" id=11]
[ext_resource path="res://entities/enemies/eel_charge.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 12 )

[sub_resource type="CircleShape2D" id=11]
radius = 32.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 20 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attacc0"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="Animation" id=5]
resource_name = "attacc1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "postattacc0"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=8]
resource_name = "postattacc1"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 32, 33, 34, 35, 32, 33, 34, 35, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1440.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="gigamanner" type="KinematicBody2D"]
script = ExtResource( 7 )
flip_path = NodePath("flippable")
max_hp = 4.0
enemy_data = ExtResource( 10 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="walledge_detector" parent="flippable" instance=ExtResource( 6 )]
position = Vector2( 16, 8 )

[node name="entity_detector" parent="flippable" instance=ExtResource( 5 )]
position = Vector2( 24, -8 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector"]
position = Vector2( 0, -8 )
shape = SubResource( 10 )

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
position = Vector2( 0, -16 )
texture = ExtResource( 8 )
hframes = 8
vframes = 5

[node name="zap_centre" type="Position2D" parent="flippable"]
position = Vector2( 32, -5 )

[node name="barrel" type="Position2D" parent="flippable"]
position = Vector2( 17, -24 )

[node name="hurtbox0" parent="flippable" instance=ExtResource( 1 )]
position = Vector2( 32, -5 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/hurtbox0"]
visible = false
shape = SubResource( 11 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 3 )
anims/attacc0 = SubResource( 4 )
anims/attacc1 = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/postattacc0 = SubResource( 7 )
anims/postattacc1 = SubResource( 8 )
anims/run = SubResource( 9 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="patrol" type="Node" parent="fsm"]
script = ExtResource( 3 )

[node name="attacc0" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "attacc0"
auto_proceed = "patrol"
recover_animation = "postattacc0"

[node name="attacc1" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "attacc1"
auto_proceed = "patrol"
recover_animation = "postattacc1"

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
bus = "SFX"

[connection signal="updated" from="flippable/walledge_detector" to="fsm/patrol" method="_on_walledge_detector_updated"]
[connection signal="updated" from="flippable/entity_detector" to="." method="_on_entity_detector_updated"]
[connection signal="activated" from="fsm/attacc0" to="." method="perform_attacc0"]
[connection signal="activated" from="fsm/attacc1" to="." method="perform_attacc1"]
